samples/_failures_safe/1761561013_2cedbf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9654c150.c: In function ‘main’:
./samples/SAFE/__tmp_9654c150.c:128:5: error: expected expression at end of input
  128 |     if (entry_count >
      |     ^~
./samples/SAFE/__tmp_9654c150.c:128:5: error: expected declaration or statement at end of input
